Add a repository, unit testing, and instrumental testing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="episodes">Episodes : </string>
+    <string name="maintenance">This Page Is Under Development</string>
+    <string name="toolbar">toolbar</string>
+    <string name="backarrow">backarrow</string>
+    <string name="corner">corner</string>
 </resources>
